--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,16 +10,24 @@
         android:id="@+id/autoCompleteTextView"
         android:layout_width="358dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
         android:text="AutoCompleteTextView"
+        app:layout_constraintBottom_toTopOf="@+id/userMessageList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:layout_width="395dp"
-        android:layout_height="582dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="69dp" />
+        android:id="@+id/userMessageList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />
 </android.support.constraint.ConstraintLayout>
